fix mobile scrollbar touch issue

--- a/SRC/css/element/btn-audio.css
+++ b/SRC/css/element/btn-audio.css
@@ -3,24 +3,28 @@
   width: 25px;
   height: 28px;
   cursor: pointer;
-  transition: opacity 0.15s, transform 0.1s;
+  transition:
+    opacity 0.15s,
+    transform 0.1s;
   border-radius: 5px;
   border: none;
-  background-color: transparent;
+  opacity: 0.5;
 
   &:hover {
     opacity: 0.8;
   }
+
   &:active {
     transform: scale(0.93);
   }
   &::after {
     content: "";
-    opacity: 0.6;
+
     position: absolute;
     inset: 0;
     margin: auto;
-    background-color: currentColor;
+    background-color: light-dark(black, white);
+
     mask-repeat: no-repeat;
     mask-position: center;
     mask-size: contain;
@@ -31,9 +35,9 @@
     mask-image: var(--icon-on);
     -webkit-mask-image: var(--icon-on);
 
-    --icon-on: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='black' stroke-width='1.2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z'/%3E%3Cpath d='M16 9a5 5 0 0 1 0 6'/%3E%3Cpath d='M19.364 18.364a9 9 0 0 0 0-12.728'/%3E%3C/svg%3E");
+    --icon-on: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='1.2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z'/%3E%3Cpath d='M16 9a5 5 0 0 1 0 6'/%3E%3Cpath d='M19.364 18.364a9 9 0 0 0 0-12.728'/%3E%3C/svg%3E");
 
-    --icon-off: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='black' stroke-width='1.2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M16 9a5 5 0 0 1 .95 2.293'/%3E%3Cpath d='M19.364 5.636a9 9 0 0 1 1.889 9.96'/%3E%3Cpath d='m2 2 20 20'/%3E%3Cpath d='m7 7-.587.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298V11'/%3E%3Cpath d='M9.828 4.172A.686.686 0 0 1 11 4.657v.686'/%3E%3C/svg%3E");
+    --icon-off: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='1.2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M16 9a5 5 0 0 1 .95 2.293'/%3E%3Cpath d='M19.364 5.636a9 9 0 0 1 1.889 9.96'/%3E%3Cpath d='m2 2 20 20'/%3E%3Cpath d='m7 7-.587.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298V11'/%3E%3Cpath d='M9.828 4.172A.686.686 0 0 1 11 4.657v.686'/%3E%3C/svg%3E");
   }
 }
 
