--- a/SRC/css/global/base.css
+++ b/SRC/css/global/base.css
@@ -175,6 +175,7 @@ html#light {
     margin-top: var(--body-margin-top-mobile);
   }
 
+
   main:not(:has(main-box)) {
     min-height: calc(100vh - var(--body-margin-top-mobile) - 10px) !important;
     margin: 5px;
@@ -184,6 +185,7 @@ html#light {
   main:has(main-box) {
     flex-direction: column;
     padding: 5px;
+    margin: 0;
     gap: 0.4rem;
     min-height: 100%;
     min-height: calc(100vh - var(--body-margin-top-mobile));
