--- a/SRC/css/layout/lit.css
+++ b/SRC/css/layout/lit.css
@@ -181,7 +181,7 @@ h1 {
   font-weight: normal;
   letter-spacing: 0.18em;
   line-height: 0.8;
-  margin-block: clamp(1rem, 8vw, 1.5rem);
+  margin-block: clamp(1rem, 8vw, 2.5rem);
   margin-left: -10px;
   padding: 15px 10px 7px 10px;
   position: sticky;
